TASK: Adopt package to punkt.de namespace
Make the taregetNode configurable

--- a/Configuration/Settings.Neos.yaml
+++ b/Configuration/Settings.Neos.yaml
@@ -2,9 +2,9 @@ Neos:
   Neos:
     fusion:
       autoInclude:
-        'Ttree.Rebirth': true
+        'PunktDe.Rebirth': true
     userInterface:
       translation:
         autoInclude:
-          'Ttree.Rebirth':
+          'PunktDe.Rebirth':
             - 'NodeTypes/*'
